WIP Investigation Angular 6

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
-    }
+    },
+    "Path": "Logs"
+  },
+  "ConnectionStrings": {
+    //TODO::CREATE DB CONNECTION STRING
+    "HeroesDBConnection": "Server=localhost;Database=HeroesDB;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
