Add proxy.config into Angular Client for proxying 4200 port on 5000 of service, rewrote deploy.ps1 powershell script some change on configuration of web api cuz i dont now how to rout angular from service via start C# application, this trouble will investigate

--- a/BackToMe.csproj
+++ b/BackToMe.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\src\models\" />
     <Folder Include="Logs\" />
+    <Folder Include="Scripts\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
