--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -20,8 +20,8 @@
     "BackToMe": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "",
-      "applicationUrl": "http://localhost:5000",      
+      "launchUrl": "api/heroes",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
