--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -53,7 +53,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ClientApp:build"
+            "browserTarget": "ClientApp:build",
+            "proxyConfig":  "proxy.config.json" 
           },
           "configurations": {
             "production": {
