--- a/BackToMe.csproj
+++ b/BackToMe.csproj
@@ -6,7 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="ClientApp\src\models\Heroe.ts" />
+    <Compile Remove="ClientApp\src\models\**" />
+    <Content Remove="ClientApp\src\models\**" />
+    <EmbeddedResource Remove="ClientApp\src\models\**" />
+    <None Remove="ClientApp\src\models\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="ClientApp\src\app\models\Heroe.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <TypeScriptCompile Include="ClientApp\src\models\Heroe.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\models\Heroe.ts" />
   </ItemGroup>
 
 </Project>
