Add Local Remote rep and investigate ANG 6

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "HeroesDBConnection": "Server=localhost;Database=HeroesDB;Trusted_Connection=True;"
   },
+  "LocalRepository": {
+    "JsonPath": ""
+  }, 
   "AllowedHosts": "*"
 }
