WIP Investegate  Angular and Web API.

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,11 +5,15 @@
     },
     "Path": "Logs"
   },
+
   "ConnectionStrings": {
     "HeroesDBConnection": "Server=localhost;Database=HeroesDB;Trusted_Connection=True;"
   },
+
   "LocalRepository": {
-    "JsonPath": ""
-  }, 
+    "JsonPath": "Heroes\\Heroes.json"
+  },
+
+  "DefaultMode": "Memory",
   "AllowedHosts": "*"
 }
